# DL-Trainer

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.codex/: config.toml
config/: llm_stage_profiles.json
docs/: anleitung_ki_server.md  architecture.md  chunking_policy.md  gpt54_teacher_runner.md  jaws_de_current_baseline.json  jaws_de_current_fifth_train.md  jaws_de_current_first_train.md  jaws_de_current_fourth_train.md  jaws_de_current_second_train.md  jaws_de_current_seventh_train.md  jaws_de_current_sixth_train.md  jaws_de_current_third_train.md  jaws_de_current_training_smoke.md  jaws_de_workflow.md  jsonl_editor.md  llm_profiles.md  metadata_schema.md  openrouter_benchmark_rollout.md  qwen3_8b_jaws_de_lora_4090_v2_cluster_runbook.md  qwen3_8b_jaws_de_lora_4090_v2_runbook.md  qwen3_8b_jaws_de_lora_4090_v3_cluster_runbook.md  qwen3_8b_jaws_de_lora_4090_v3_runbook.md  qwen3_8b_jaws_de_lora_4090_v4_cluster_runbook.md  qwen3_8b_jaws_de_lora_4090_v4_runbook.md  qwen3_8b_jaws_de_lora_clean_pilot.md  qwen3_8b_jaws_de_lora_data_expansion_plan.md  qwen_data_expansion_review_runbook.md  qwen_export_and_training.md  qwen_lora_dataset_cleanup.md  repo_specification.md  review_rules.md  sft_eval_pipeline.md  support_behavior_spec.md  training_policy.md
schemas/: chunk.schema.json  eval_case.schema.json  manual_meta.schema.json  qwen_sft_metadata.schema.json  qwen_sft_record.schema.json  qwen_training_config.schema.json  sft_sample.schema.json  task_card.schema.json  teacher_job.schema.json  teacher_judge_result.schema.json  (+3 more)
(+1026 files in other folders)
